src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>ACR_Date_Time__c</fullName>
        <formula>User_Order_Extension__r.ACR_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACR Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AM_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AM Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Order__c</fullName>
        <formula>If(Order_Date_Time_Created__c &gt; Account__r.Date_Time_Opt_In__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Assigned__c</fullName>
        <formula>IF(ISBLANK(Account__r.Biz_Starter_BAM__c), &apos;&apos;, Account__r.Business_Account_Manager__r.FirstName + &apos; &apos; + Account__r.Business_Account_Manager__r.LastName)</formula>
        <label>Account Manager Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Service_Status__c</fullName>
        <formula>Account__r.Service_Status2__c</formula>
        <label>Account Service Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_1_Hour_to_Order_Created_Datetiem__c</fullName>
        <formula>Order_Date_Time_Created__c + 0.04167</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add 1 Hour to Order Created Datetiem</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Adjusted_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adjusted Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent_1_Activity__c</fullName>
        <label>14 Day Sales Cycle - Date/Time - Agent 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agent_2_Activity__c</fullName>
        <label>14 Day Sales Cycle - Date/Time - Agent 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agent_Date_Diff__c</fullName>
        <description>Date Diff-Test By Basu for Debugging</description>
        <formula>Agent_1_Activity__c  -  Agent_2_Activity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Date Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Data integration populates the order amount</description>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attorney_Advice__c</fullName>
        <label>Attorney Advice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is marked to true if this Order was used to Assign the Account Manager on the Account.</description>
        <label>Auto Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BAP_Standalone_Product_Count__c</fullName>
        <formula>IF( Base_Product__r.Process__r.Name = &quot;Business Advantage Pro Standalone&quot;, 1, null)</formula>
        <label>BAP (Standalone) Product Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Product_Name__c</fullName>
        <formula>Base_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Product_Text__c</fullName>
        <formula>Base_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The base product of the order.  Data integration will populate this field.</description>
        <label>Base Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bazonko__c</fullName>
        <label>Bazonko</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_AutoAssign_Exclude_Count__c</fullName>
        <description>Count of Full Service Compliance Package</description>
        <label>Biz Auto-Assign Exclude Count</label>
        <summaryFilterItems>
            <field>Order_Item__c.Product_Name__c</field>
            <operation>equals</operation>
            <value>Full Service Compliance Package</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Biz_Charge_AMEX__c</fullName>
        <label>Biz Charge-AMEX</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Checking_BofA__c</fullName>
        <label>Biz Checking-BofA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Credit_DNB__c</fullName>
        <label>Biz Credit-DNB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Ins_Bolt__c</fullName>
        <label>Biz Ins-Bolt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Plans_Palo_Alto__c</fullName>
        <label>Biz Plans-Palo Alto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Printing_PrintRunner__c</fullName>
        <label>Biz Printing-PrintRunner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Quickbooks_Online__c</fullName>
        <label>Biz Quickbooks Online</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Toll_Free_DaVinci__c</fullName>
        <label>Biz Toll Free #-DaVinci</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Eligible_Agent_1_Day1__c</fullName>
        <formula>If(ISBLANK( Declined_To_Approved_Time__c ), 

(If(Is_First_RA_Renewal__c = True || Agent_1_Activity__c+1 &gt;= Order_Date_Time_Created__c ||Agent_1_Activity__c+5 &gt;= Order_Date_Time_Created__c &amp;&amp; Order_Created_By__c &lt;&gt; &quot;RB.ConsoleApp&quot; &amp;&amp; CONTAINS(Base_Product__r.Name, &apos;RA Renewal&apos;) , Commission_Eligible_Agent_1__r.FirstName+&quot; &quot;+ Commission_Eligible_Agent_1__r.LastName , null)), 

(If(Is_First_RA_Renewal__c = True || Agent_1_Activity__c+1 &gt;= Declined_To_Approved_Time__c ||Agent_1_Activity__c+5 &gt;= Order_Date_Time_Created__c &amp;&amp; Order_Created_By__c &lt;&gt; &quot;RB.ConsoleApp&quot; &amp;&amp; CONTAINS(Base_Product__r.Name, &apos;RA Renewal&apos;) , Commission_Eligible_Agent_1__r.FirstName+&quot; &quot;+ Commission_Eligible_Agent_1__r.LastName, null)))</formula>
        <label>Commission Eligible Agent 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Eligible_Agent_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>14 Day Sales Cycle - Agent 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Eligible_Agent_2_Day1__c</fullName>
        <formula>If(ISBLANK( Declined_To_Approved_Time__c ), 

(If(Is_First_RA_Renewal__c = True  || Agent_2_Activity__c+1  &gt;= Order_Date_Time_Created__c ||Agent_2_Activity__c+5  &gt;=  Order_Date_Time_Created__c  &amp;&amp;  Order_Created_By__c &lt;&gt; &quot;RB.ConsoleApp&quot; &amp;&amp;  CONTAINS(Base_Product__r.Name, &apos;RA Renewal&apos;)  , Commission_Eligible_Agent_2__r.FirstName+&quot; &quot;+ Commission_Eligible_Agent_2__r.LastName, null )), 

(If(Is_First_RA_Renewal__c = True  || Agent_2_Activity__c+1  &gt;=  Declined_To_Approved_Time__c ||Agent_2_Activity__c+5  &gt;= Order_Date_Time_Created__c &amp;&amp;  Order_Created_By__c &lt;&gt; &quot;RB.ConsoleApp&quot; &amp;&amp;  CONTAINS(Base_Product__r.Name, &apos;RA Renewal&apos;) , Commission_Eligible_Agent_2__r.FirstName+&quot; &quot;+ Commission_Eligible_Agent_2__r.LastName , null)))</formula>
        <label>Commission Eligible Agent 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Eligible_Agent_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>14 Day Sales Cycle - Agent 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Eligible_Total__c</fullName>
        <formula>Net_Total__c -  Filling_Fee_Total__c -  Omitted_Calculation_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Eligible Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Notes_All__c</fullName>
        <description>All contact notes</description>
        <label>Contact Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Notes_Last__c</fullName>
        <label>Last Contact Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_State__c</fullName>
        <label>Contact State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Login__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Login</label>
        <referenceTo>Customer_Login__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Declined__c</fullName>
        <label>Date Declined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Account_Last_Modified__c</fullName>
        <formula>Account__r.Date_Time_Modified__c</formula>
        <label>Date/Time Account Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Created__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Modified__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Questionaire_Started__c</fullName>
        <label>Date Time Questionaire Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_TOS_Accepted__c</fullName>
        <description>The datetime when Terms of Services (TOS) is accepted by the customer</description>
        <label>Date/Time TOS Accepted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_TOS_Not_Accepted__c</fullName>
        <formula>IF(TOS_Accepted__c = True, 
null, ROUND((NOW() - Order_Date_Time_Created__c ),0))</formula>
        <label>Days TOS Not Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declined_To_Approved_Time__c</fullName>
        <description>Datetime when the order status changed from Declined to Approved</description>
        <label>Declined To Approved Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Discount amount on the whole order</description>
        <label>Discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite_Services__c</fullName>
        <label>Expedite Services</label>
        <summaryFilterItems>
            <field>Order_Item__c.Product_Name__c</field>
            <operation>equals</operation>
            <value>Expedited Processing</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Filing_Date__c</fullName>
        <label>Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Filling_Fee_Total__c</fullName>
        <description>Filling Fee Total</description>
        <label>Filling Fee Total</label>
        <summarizedField>Order_Item__c.Extended_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Order_Item__c.Filling_Fee__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Status__c</fullName>
        <label>Fulfillment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Sale</fullName>
                </value>
                <value>
                    <fullName>Not Yet Started</fullName>
                </value>
                <value>
                    <fullName>Entity Name Avail</fullName>
                </value>
                <value>
                    <fullName>Pre-Filing Prob</fullName>
                </value>
                <value>
                    <fullName>Sent for Sig</fullName>
                </value>
                <value>
                    <fullName>Sent to SOS</fullName>
                </value>
                <value>
                    <fullName>Docs Rec’d</fullName>
                </value>
                <value>
                    <fullName>Docs Backends</fullName>
                </value>
                <value>
                    <fullName>Sent to Cust</fullName>
                </value>
                <value>
                    <fullName>TM Search</fullName>
                </value>
                <value>
                    <fullName>TM G&amp;S</fullName>
                </value>
                <value>
                    <fullName>TM L&amp;S</fullName>
                </value>
                <value>
                    <fullName>TM App Prep</fullName>
                </value>
                <value>
                    <fullName>TM App Filed</fullName>
                </value>
                <value>
                    <fullName>Office Action</fullName>
                </value>
                <value>
                    <fullName>TM SOU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gross_Total__c</fullName>
        <description>Sum of order line item by the price field in Order Item</description>
        <label>Gross Total</label>
        <summarizedField>Order_Item__c.Extended_Price__c</summarizedField>
        <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Have_SBR_Product__c</fullName>
        <formula>IF(SBR_Product_Count__c &gt; 0, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Have SBR Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Installment_Decline_Date__c</fullName>
        <label>Initial Installment Decline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Installment_Paid_Date__c</fullName>
        <label>Initial Installment Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_First_RA_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is First RA Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sales_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sales Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sales_Order_old__c</fullName>
        <formula>IF( Commission_Eligible_Agent_1__c != null ,True  ,False )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Sales Order(old)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAP_Standalone_Product_Count__c</fullName>
        <formula>IF( Base_Product__r.Process__r.Name = &quot;Legal Advantage Plus Standalone&quot;, 1, null)</formula>
        <label>LAP (Standalone) Product Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LZ_Parent_Order__c</fullName>
        <externalId>true</externalId>
        <label>LZ Parent Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LZ_Product_ID__c</fullName>
        <formula>Text(Order_Item__r.Product__r.LZ_Product_ID__c)</formula>
        <label>LZ Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Point__c</fullName>
        <label>Last Touch Point</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Post Consult -Legal</fullName>
                </value>
                <value>
                    <fullName>Post Consult - Tax</fullName>
                </value>
                <value>
                    <fullName>Pre-Filing Problem</fullName>
                </value>
                <value>
                    <fullName>Post-Filing Problem</fullName>
                </value>
                <value>
                    <fullName>Customer Called Back</fullName>
                </value>
                <value>
                    <fullName>Initial Contact</fullName>
                </value>
                <value>
                    <fullName>Awaiting Signature</fullName>
                </value>
                <value>
                    <fullName>Docs Rec’d</fullName>
                </value>
                <value>
                    <fullName>Packet Review</fullName>
                </value>
                <value>
                    <fullName>Annual Filings</fullName>
                </value>
                <value>
                    <fullName>G&amp;S Consult</fullName>
                </value>
                <value>
                    <fullName>TM Search Results</fullName>
                </value>
                <value>
                    <fullName>TM App Prep</fullName>
                </value>
                <value>
                    <fullName>TM App Filed</fullName>
                </value>
                <value>
                    <fullName>TM App Published</fullName>
                </value>
                <value>
                    <fullName>TM Intent to Use 8 Month</fullName>
                </value>
                <value>
                    <fullName>TM Use Commerce 8 Month</fullName>
                </value>
                <value>
                    <fullName>TM Notice of Allowance Issued</fullName>
                </value>
                <value>
                    <fullName>TM Office Action</fullName>
                </value>
                <value>
                    <fullName>TM 1 Month</fullName>
                </value>
                <value>
                    <fullName>TM 2 Month</fullName>
                </value>
                <value>
                    <fullName>TM 3 Month</fullName>
                </value>
                <value>
                    <fullName>TM 4 Month</fullName>
                </value>
                <value>
                    <fullName>TM 5 Month</fullName>
                </value>
                <value>
                    <fullName>TM 6 Month</fullName>
                </value>
                <value>
                    <fullName>TM 7 Month</fullName>
                </value>
                <value>
                    <fullName>TM 8 Month</fullName>
                </value>
                <value>
                    <fullName>TM 9 Month</fullName>
                </value>
                <value>
                    <fullName>TM 10 Month</fullName>
                </value>
                <value>
                    <fullName>TM 11 Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Matter__c</fullName>
        <formula>User_Order_Extension__r.Legal_Matter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Matter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_Ins_Accuquote__c</fullName>
        <label>Life Ins-Accuquote</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MyPRGenie__c</fullName>
        <label>MyPRGenie</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_AM_Order__c</fullName>
        <description>Check if the current user is the account manager on the account the order is associated with.</description>
        <formula>IF(NOT ISBLANK( Account__r.Biz_Starter_BAM__c ) &amp;&amp;  Account__r.Business_Account_Manager__r.Id = $User.Id, True, False)</formula>
        <label>My AM Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Total_After_AM__c</fullName>
        <formula>If( AM_Order__c &gt; 0,  Net_Total__c , null)</formula>
        <label>Net (Gross - Discount) After AM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Total_Before_AM__c</fullName>
        <formula>If( AM_Order__c &lt; 1,  Net_Total__c , null)</formula>
        <label>Net (Gross - Discount) Before AM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <formula>Gross_Total__c -  Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net (Gross - Discount)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_minus_Filing_Fee__c</fullName>
        <formula>Net_Total__c -  Filling_Fee_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net minus Filing Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Omitted_Calculation_Amount__c</fullName>
        <label>Omitted Calculation Amount</label>
        <summarizedField>Order_Item__c.Extended_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Order_Item__c.LZ_Product_ID_Commission__c</field>
            <operation>equals</operation>
            <value>3210, 3211</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderID__c</fullName>
        <externalId>true</externalId>
        <label>OrderID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Cohort__c</fullName>
        <label>Order Cohort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cohort 1</fullName>
                </value>
                <value>
                    <fullName>Cohort 2</fullName>
                </value>
                <value>
                    <fullName>Cohort 3</fullName>
                </value>
                <value>
                    <fullName>Cohort 4</fullName>
                </value>
                <value>
                    <fullName>Cohort 5</fullName>
                </value>
                <value>
                    <fullName>Cohort 6</fullName>
                </value>
                <value>
                    <fullName>Cohort 7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Created_By__c</fullName>
        <label>Order Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date_Time_Created__c</fullName>
        <description>Store the created date time of the order created in LZ Data</description>
        <label>Order Date/Time Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Date_Time_Modified__c</fullName>
        <description>DateTime when the Order gets modified.</description>
        <label>Order Date/Time Modified</label>
        <type>DateTime</type>
    </fields>
</CustomObject>